Changes for 1.7.0

 - [DEV-274] added overflow check for uint64 for incoming values (Sasha)
 - [DEV-258] added additional reports based on bar graphs (Artem)
 - [DEV-257] added bar graph class (Artem)
 - [DEV-252] improved audit log of host groups,hosts,items and media types (Sasha)
 - [DEV-266] added support of octal and hexadecimal data (Sasha)
 - [DEV-253] improved audit log filtering (Artem)
 - [DEV-267] improved item template-update (Artem)
 - [DEV-261] added triggers status to screens (Artem)
 - [DEV-256] improved multiple labels in maps and support of macros (Sasha)
 - [DEV-265] added popups with links to "Status of trigger" & "Events history" pages (Artem)
 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.2

 - [ZBX-631] fixed incorrect incoming string values if using dbcache (Sasha)
 - [ZBX-630] improved log files view in BB theme (Artem)
 - [ZBX-629] fixed sql error in popup window (Artem)
 - [DEV-271] fixed graphs out of bounds problem (Artem)
 - [ZBX-628] fixed memory leak in proxy module (Sasha)
 - [ZBX-611] fixed undefined variables in installation wizard (Artem)
 - [ZBX-612] fixed possible incorrect value for host (Artem)
 - [ZBX-627] fixed items update (Artem)
 - [ZBX-625] fixed possible incorrect processing of delta for integers if using dbcache (Sasha)
 - [DEV-273] added mass update for IPMI fields (Sasha)
 - [DEV-272] added support of {HOSTNAME}, {HOST.CONN}... macros for "IPMI IP address" (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers(Sasha)
 - [ZBX-622] fixed broked autocreation of SQLite database (Alexei)